<resources>
    <string name="app_name">PaketnikApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recycleView_History">History</string>
    <string name="recycleView_HistoryBoxID">Box ID: </string>
    <string name="recycleView_HistoryDate">Date: </string>
    <string name="recycleView_HistoryOpen">Open: </string>


    <string name="FirstpageTitle">PAMETNI PAKETNIK </string>
    <string name="loginButton">Login</string>
    <string name="ButtonRegister">Register</string>
    <string name="loginTitle">Login</string>
    <string name="Donthaveaccount">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account</string>

    <string name="profile_logout">Logout</string>
    <string name="registerText">Register</string>
    <string name="usernameText">Username</string>
    <string name="email_addressText">Email Address</string>
    <string name="passwordText">Password</string>
    <string name="first_nameText">First Name</string>
    <string name="last_nameText">Last Name</string>
    <string name="telephoneText">Telephone</string>
    <string name="streetText">Street</string>
    <string name="postCodeText">Post code</string>
    <string name="capture">Capture</string>

    <string name="TSP">TSP</string>
    <string name="open_the_box">Open The Box</string>
    <string name="show_mailbox">Show Mailbox</string>
    <string name="home_image_desc">Pametni paketnik society</string>
    <string name="distance">Distance</string>
    <string name="done">Done</string>
    <string name="duration">Duration</string>
</resources>